# phrase_getter

./: README.md  phrase_getter.py  pyproject.toml  vtt2text.py
src/phrase_getter/: phrase_getter.py  visemes.py  vtt_tools.py
src/yt_phrase_getter/: phrase_getter.py  vtt_tools.py
tests/: phrase_getter_tests.py
