[build-system]
requires = ["hatchling","ffmpeg","yt_dlp","pandas","pytube"]
build-backend = "hatchling.build"

[project]
name = "phrase_getter"
version = "0.0.1"
authors = [
  { name="Daniel Gilbert", email="dgilbert418@gmail.com" },
]
description = "Collect clips of phrases from a youtube channel."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/dgilbert418/phrase_getter"